# screen-capture-general

./: README.md  maim_area  make_gif.sh  make_screenshot.sh
byzanz/: .cvsignore  ChangeLog  Makefile.am  README  byzanz.doap  configure.ac
byzanz/gifenc/: .cvsignore  gifenc.c  quantize.c
byzanz/po/: .cvsignore  ChangeLog  POTFILES.in  ar.po  bs.po  cs.po  de.po  fr.po  gl.po  hu.po  ja.po  oc.po  pl.po  pt.po  ro.po  ru.po  sv.po
byzanz/src/: .cvsignore  Makefile.am  byzanz-record.1  byzanzapplet.c  byzanzencoder.c  byzanzencoderbyzanz.h  byzanzencoderflv.c  byzanzencoderflv.h  byzanzencodergstreamer.c  byzanzencoderogv.c  byzanzencoderwebm.c  byzanzlayercursor.c  byzanzlayercursor.h  byzanzlayerwindow.c  byzanzqueue.c  byzanzqueueinputstream.h  byzanzselect.c  byzanzserialize.c  byzanzserialize.h  byzanzsession.c  org.gnome.byzanz.applet.gschema.xml.in.in  paneltogglebutton.c  screenshot-utils.h
gifs/: gif_area  xrectsel
gifs/byzanz/: MAINTAINERS  NEWS  autogen.sh
gifs/byzanz/data/: Makefile.am
gifs/byzanz/gifenc/: Makefile.am  gifenc.h
gifs/byzanz/macros/: Makefile.am
gifs/byzanz/po/: POTFILES.skip  ca.po  da.po  dz.po  el.po  en_GB.po  es.po  fi.po  id.po  it.po  lv.po  nb.po  pt_BR.po  sl.po  sr.po  sr@latin.po  tr.po  uk.po  vi.po  zh_CN.po
gifs/byzanz/src/: byzanz-playback.1  byzanzapplet.xml  byzanzencoder.h  byzanzencoderbyzanz.c  byzanzencodergif.c  byzanzencodergif.h  byzanzencodergstreamer.h  byzanzencoderogv.h  byzanzencoderwebm.h  byzanzlayer.c  byzanzlayer.h  byzanzlayerwindow.h  byzanzmarshal.list  byzanzqueue.h  byzanzqueueinputstream.c  byzanzqueueoutputstream.c  byzanzqueueoutputstream.h  byzanzrecorder.c  byzanzrecorder.h  byzanzselect.h  byzanzsession.h  org.gnome.ByzanzApplet.panel-applet.in.in  org.gnome.panel.applet.ByzanzAppletFactory.service.in  paneltogglebutton.h  playback.c  record.c  screenshot-utils.c
screenshots/: maim_active_window  maim_area  scrot_area
video/: video_area
