iconsize=22x22
category=apps
iconsdir = $(datadir)/icons/hicolor/$(iconsize)/$(category)
icons_DATA = \
	byzanz-record-desktop.png \
	byzanz-record-area.png \
	byzanz-record-window.png

svgdir = $(datadir)/icons/hicolor/scalable/$(category)
svg_DATA = \
	byzanz-record-desktop.svg \
	byzanz-record-area.svg \
	byzanz-record-window.svg

EXTRA_DIST = $(icons_DATA) \
			 $(svg_DATA)
